# deprecated-cmake-mam

./: CMakeLists.txt  README.md  make -d.txt
cclient/: CMakeLists.txt
common/trinary/: flex_trit.h  trit_tryte.c
mam/: CMakeLists.txt  CMakeListsClean.txt
mam/api/: trit_t_to_mam_msg_read_context_t_map.c  trit_t_to_mam_msg_read_context_t_map.h  trit_t_to_mam_msg_write_context_t_map.c  trit_t_to_mam_msg_write_context_t_map.h
mam/examples/: common.c  send-msg.c
mam/mam/: mam_channel_t_set.c  mam_channel_t_set.h  mam_endpoint_t_set.c  mam_endpoint_t_set.h  mam_pk_t_set.c  mam_pk_t_set.h
mam/mss/: mss.h
mam/ntru/: mam_ntru_pk_t_set.c  mam_ntru_pk_t_set.h  mam_ntru_sk_t_set.c  mam_ntru_sk_t_set.h  poly.h
mam/psk/: mam_psk_t_set.c  mam_psk_t_set.h
